src/styles/partials/_postPage.scss
$color_1: var(--heading-color);
$color_2: #666666;
$color_3: var(--font-color);
$color_4: #17b6ff;
$color_5: rgb(200, 200, 200);
$font-family_1: "JetBrains Mono", firecode;
$background-color_1: #180d23;

.container {
  margin-top: 4rem !important;
  margin-bottom: 2rem;
  // margin: 0 auto;
  padding: 40px;
  .post-navigation {
    display: flex;
    justify-content: space-between;
    padding: 2rem 0;
    .prev {
      text-align: left;
      width: 20rem;
      margin: 0.3rem;
    }
    .next {
      text-align: right;
      width: 20rem;
      margin: 0.3rem;
    }
    a {
      color: #17b6ff;
      text-decoration: none;
    }
  }
}

.blog-content {
  max-width: 700px !important;
  margin: auto;
}

.title {
  font-size: 37px;
  color: $color_1;
  font-family: var(--heading-font-family);
  font-weight: bold;
  margin-bottom: 20px;
}
.date {
  color: $color_2;
  font-size: 15px;
  margin-bottom: 40px;
}

::-webkit-scrollbar {
  height: 4px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
}

::-webkit-scrollbar-thumb {
  background-color: #39393986;
}

.content {
  color: $color_3;

  line-height: 1.6;
  word-wrap: break-word;
  border-radius: 12px;
  cursor: auto !important;
  font-size: 1rem !important;

  p {
    color: $color_3;
    margin-bottom: 20px;
    font-size: 1rem;
  }
  h1 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-size: 1.9rem;
    font-weight: normal;
    color: $color_3;
  }
  h2 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }
  h3 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }
  h4 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }
  h5 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }
  h6 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }
  a {
    color: $color_4;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  }
  strong {
    font-weight: bold;
  }
  em {
    font-style: italic;
  }
  ul {
    margin-left: 20px;
  }
  ol {
    margin-left: 20px;
  }
  li {
    margin-bottom: 10px;
  }
  code {
    font-family: $font-family_1;
    background-color: rgb(198 198 198 / 18%);
    padding: 0.1rem 0.4rem;
    border-radius: 2px;
    margin: 0.3rem;
    font-size: 14px;
    color: $color_5;
  }
  pre {
    background-color: #1d202692;
    backdrop-filter: blur(10px);
    border: 2px solid #39393912;
    font-size: 15px;
    padding: 1rem;
    display: flex;
    margin: 2rem 0;
    border-radius: 2px;
    color: $color_5;
    overflow-x: auto;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
      rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;

    code {
      font-family: $font-family_1;
      border: none;
      background-color: transparent;
      padding: 0;
      font-weight: normal;
      margin: 0;
      color: $color_5;
    }
  }

  table {
    width: 100%;
    margin: 2rem 0;
    color: #ababab;
    border-collapse: collapse;
  }

  th,
  td {
    border: 2px solid #dddddd09;
    padding: 8px;
    text-align: left;
  }

  th {
    font-weight: normal;
    color: white;
    font-size: 1.5rem;
    background-color: #19191b8f;
  }

  img {
    max-width: 100%;
    height: auto;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
      rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;

    margin-bottom: 20px;
    border-radius: 12px;
  }
}
.tableOfContent::-webkit-scrollbar {
  width: 6px;
}

.tableOfContent::-webkit-scrollbar-thumb {
  background-color: #262626;
  border-radius: 14px;
}

.tableOfContent {
  position: fixed;
  right: 10px;
  width: 20rem;
  top: 120px;
  color: $color_3;
  max-height: 14rem;
  border: 1px solid rgba(124, 104, 238, 0.626);
  background-color: rgba(124, 104, 238, 0.087);
  padding: 1rem 0 1rem 1rem;
  border-radius: 5px;
  overflow: auto;
  line-height: 1.6;
  word-wrap: break-word;
  cursor: auto !important;
  --scale: 1;
  ul {
    list-style: none !important;
  }

  @media screen and (max-width: 1400px) {
    position: inherit;
    width: auto;
    height: auto;
    max-height: 25rem;
  }

  p {
    color: $color_3;
    margin-bottom: 20px;
  }

  h2 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-weight: normal;
    color: $color_3;
  }

  a {
    color: $color_4;
    text-decoration: none;
    font-size: 15px;
    &:hover {
      text-decoration: underline;
    }
  }

  li {
    margin-bottom: 10px;
  }
}

@media screen and (max-width: 600px) {
  .container {
    padding: 20px;
  }
  .title {
    font-size: 29px;
  }
  .content {
    font-size: 1.03rem;

    h1 {
      font-size: 32px;
    }
    h2 {
      font-size: 26px;
    }
    h3 {
      font-size: 24px;
    }
    pre {
      font-size: 21px;
    }
  }
}

blockquote {
  &::before {
    content: "💡";
    padding: 1rem;
    font-size: 1.2rem;
    align-items: center;
    display: flex;
    flex-wrap: wrap;
  }
  overflow: auto;
  background-color: #121212;
  backdrop-filter: blur(10px);
  border: 2px solid #ffffff12;
  font-size: 15px;
  padding: 10px;
  display: flex;
  align-items: center;
  margin: 2rem 0;
  border-radius: 12px;
  color: $color_5;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;

  p {
    align-items: center;
    margin: 0 !important;
  }
  a {
    margin: 0 5px;
  }
}

.donateUs {
  font-size: 1rem;
  padding: 1rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
  border-radius: 6px;

  margin: 2.5rem 0;
  background-color: #121212;
}

.sharePostBlock {
  font-size: 1rem;
  padding: 2rem;
  margin: 2.2rem 0;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
  border-radius: 6px;
  border: 2px solid #ffffff07;
  background-color: #121212;

  p {
    font-size: 1.5rem;
  }
}

.donateButton {
  background-color: #1e1e1e;
  color: #aaa;
  border-radius: 6px;
  border: 1px solid #cccccc16;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;

  // border: 2px solid #ababab13;
  width: fit-content;
  text-decoration: none;
  font-weight: 100;
  padding: 0.5rem 0.7rem;
}

.timeline-comment {
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
}

.related-blogs {
  position: sticky;
  top: 20px;
  box-shadow: rgba(0, 0, 0, 0.745) 0px 20px 30px -10px;
  .accordion {
    background-color: #121212;
    color: rgb(170, 170, 170);

    cursor: pointer;
    padding: 18px;
    justify-content: space-between;
    display: flex !important;
    border: 2px solid rgba(124, 104, 238, 0.577);
    border-radius: 8px;
    text-align: left;
    outline: none;
    transition: background-color 0.2s ease-out !important;
  }
  ul {
    padding: 0.8rem;
    display: flex;
    flex-direction: column;
  }
  li {
    display: flex;
    align-items: center;
    a {
      color: #17b6ff;
      font-size: 15px;
      text-decoration: none;
    }
  }
  .open-accordion {
    transform: translateY(-7px);
    background-color: #121212;
    border: 2px solid rgba(124, 104, 238, 0.577);
    border-top: none;
    border-radius: 0 0 8px 8px;
  }
  .panel {
    height: 0;
    overflow: hidden;
    transition: height 0.3s ease-out !important;
  }
}
.panel.open {
  height: auto;
}

